carriage, carriage-price management

--- a/src/app/features/journey/detail-journey/detail-journey.component.html
+++ b/src/app/features/journey/detail-journey/detail-journey.component.html
@@ -18,8 +18,8 @@
 
   <!-- Danh sách toa -->
   <app-journey-carriage-list
-    [carriages]="carriages"
     [journeyId]="journeyId"
+    [scheduleId]="scheduleId"
     (carriagesChanged)="loadCarriages()"
   ></app-journey-carriage-list>
 
