--- a/src/app/views/pages/register/register.component.html
+++ b/src/app/views/pages/register/register.component.html
@@ -131,6 +131,18 @@
                   </a>
                 </div>
               </div>
+              <div class="mt-2 text-center">
+                <a
+                  routerLink="/schedule-lookup"
+                  style="
+                    text-decoration: underline;
+                    color: #28a745;
+                    cursor: pointer;
+                  "
+                >
+                  Tìm chuyến tàu ngay
+                </a>
+              </div>
             </form>
           </c-card-body>
         </c-card>
