--- a/src/app/layout/default-layout/default-header/default-header.component.html
+++ b/src/app/layout/default-layout/default-header/default-header.component.html
@@ -6,12 +6,12 @@
       cHeaderToggler
       class="btn"
       toggle="visible"
-      style="margin-inline-start: -14px;"
+      style="margin-inline-start: -14px"
     >
       <svg cIcon name="cilMenu" size="lg"></svg>
     </button>
     <c-header-nav class="d-none d-md-flex">
-      <c-nav-item>
+      <!-- <c-nav-item>
         <a cNavLink routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
       </c-nav-item>
       <c-nav-item>
@@ -19,19 +19,19 @@
       </c-nav-item>
       <c-nav-item>
         <a cNavLink routerLink="/settings" routerLinkActive="active">Settings</a>
-      </c-nav-item>
+      </c-nav-item> -->
     </c-header-nav>
 
-    <c-header-nav class="d-none d-md-flex ms-auto ">
-      <a cNavLink>
+    <c-header-nav class="d-none d-md-flex ms-auto">
+      <!-- <a cNavLink>
         <svg cIcon class="my-1" name="cilBell" size="lg"></svg>
       </a>
       <a cNavLink>
         <svg cIcon class="my-1" name="cilList" size="lg"></svg>
-      </a>
-      <a cNavLink>
+      </a> -->
+      <!-- <a cNavLink>
         <svg cIcon class="my-1" name="cilEnvelopeOpen" size="lg"></svg>
-      </a>
+      </a> -->
     </c-header-nav>
 
     <c-header-nav class="ms-auto ms-md-0">
@@ -47,27 +47,29 @@
     <c-header-nav class="mx-0">
       <ng-container *ngTemplateOutlet="userDropdown" />
     </c-header-nav>
-
   </c-container>
-  <c-container [fluid]="true" class="px-4">
+  <!-- <c-container [fluid]="true" class="px-4">
     <c-breadcrumb-router />
-  </c-container>
+  </c-container> -->
 </ng-container>
 <!--</c-header>-->
 
 <ng-template #userDropdown>
-  <c-dropdown [popperOptions]="{ placement: 'bottom-start' }" variant="nav-item">
+  <c-dropdown
+    [popperOptions]="{ placement: 'bottom-start' }"
+    variant="nav-item"
+  >
     <button [caret]="false" cDropdownToggle class="py-0 pe-0">
       <c-avatar
         shape="rounded-1"
         [size]="'md'"
-        src="./assets/images/avatars/8.jpg"
+        src="./assets/images/avatars/10.png"
         status="success"
         textColor="primary"
       />
     </button>
     <ul cDropdownMenu class="pt-0 w-auto">
-      <li>
+      <!-- <li>
         <h6 cDropdownHeader class="bg-body-secondary text-body-secondary fw-semibold py-2 rounded-top">
           Account
         </h6>
@@ -101,20 +103,20 @@
           Comments
           <c-badge class="ms-auto" color="warning"> 42</c-badge>
         </a>
-      </li>
-      <li>
+      </li> -->
+      <!-- <li>
         <h6 cDropdownHeader class="bg-body-secondary text-body-secondary fw-semibold py-2">
           Settings
         </h6>
       </li>
-      <li></li>
+      <li></li> -->
       <li>
         <a cDropdownItem routerLink="">
           <svg cIcon class="me-2" name="cilUser"></svg>
           Profile
         </a>
       </li>
-      <li>
+      <!-- <li>
         <a cDropdownItem routerLink="">
           <svg cIcon class="me-2" name="cilSettings"></svg>
           Settings
@@ -140,17 +142,24 @@
       </li>
       <li>
         <hr cDropdownDivider />
-      </li>
-      <li>
+      </li> -->
+      <!-- <li>
         <a cDropdownItem routerLink="">
           <svg cIcon class="me-2" name="cilLockLocked"></svg>
           Lock Account
         </a>
-      </li>
-      <li>
-        <a cDropdownItem routerLink="">
+      </li> -->
+      <li *ngIf="isLoggedIn">
+        <a cDropdownItem (click)="logout()">
           <svg cIcon class="me-2" name="cilAccountLogout"></svg>
           Logout
+        </a>
+      </li>
+
+      <li *ngIf="!isLoggedIn">
+        <a cDropdownItem routerLink="/login">
+          <svg cIcon class="me-2" name="cilAccountLogin"></svg>
+          Login
         </a>
       </li>
     </ul>
@@ -160,22 +169,18 @@
 <ng-template #themeDropdown>
   <c-dropdown alignment="end" variant="nav-item">
     <button [caret]="false" cDropdownToggle>
-      @switch (colorMode()) {
-        @case ("dark") {
-          <svg cIcon name="cilMoon" size="lg"></svg>
-        }
-        @case ("auto") {
-          <svg cIcon name="cilContrast" size="lg"></svg>
-        }
-        @default {
-          <svg cIcon name="cilSun" size="lg"></svg>
-        }
-      }
+      @switch (colorMode()) { @case ("dark") {
+      <svg cIcon name="cilMoon" size="lg"></svg>
+      } @case ("auto") {
+      <svg cIcon name="cilContrast" size="lg"></svg>
+      } @default {
+      <svg cIcon name="cilSun" size="lg"></svg>
+      } }
     </button>
     <div cDropdownMenu>
       <button
         (click)="colorMode.set('light')"
-        [active]="colorMode()==='light'"
+        [active]="colorMode() === 'light'"
         [routerLink]="[]"
         cDropdownItem
         class="d-flex align-items-center"
@@ -185,7 +190,7 @@
       </button>
       <button
         (click)="colorMode.set('dark')"
-        [active]="colorMode()==='dark'"
+        [active]="colorMode() === 'dark'"
         [routerLink]="[]"
         cDropdownItem
         class="d-flex align-items-center"
@@ -195,7 +200,7 @@
       </button>
       <button
         (click)="colorMode.set('auto')"
-        [active]="colorMode()==='auto'"
+        [active]="colorMode() === 'auto'"
         [routerLink]="[]"
         cDropdownItem
         class="d-flex align-items-center"
