--- a/src/app/views/pages/login/login.component.html
+++ b/src/app/views/pages/login/login.component.html
@@ -91,11 +91,11 @@
                       {{ isLoading ? "Đang đăng nhập..." : "Login" }}
                     </button>
                   </c-col>
-                  <c-col class="text-right" xs="6">
+                  <!-- <c-col class="text-right" xs="6">
                     <button cButton class="px-0" color="link" type="button">
                       Forgot password?
                     </button>
-                  </c-col>
+                  </c-col> -->
                 </c-row>
               </form>
             </c-card-body>
@@ -106,19 +106,32 @@
           >
             <c-card-body class="text-center">
               <div>
-                <h2>Sign up</h2>
+                <h2>Welcome!</h2>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Bạn chưa có tài khoản? Đăng ký ngay hoặc thử tìm chuyến tàu
+                  trước khi đăng nhập.
                 </p>
+
                 <button
                   cButton
-                  class="mt-3"
-                  color="primary"
-                  routerLink="/register"
+                  class="mt-2"
+                  color="light"
+                  (click)="goToRegister()"
                   type="button"
                 >
                   Register Now!
+                </button>
+
+                <br />
+
+                <button
+                  cButton
+                  class="mt-3"
+                  color="success"
+                  (click)="goToScheduleLookup()"
+                  type="button"
+                >
+                  Tìm chuyến tàu ngay
                 </button>
               </div>
             </c-card-body>
